# FOGMOE-telegram-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  example.config.json  pyproject.toml  requirements.txt  runBot.sh
docs/: admin-commands.md  ai-provider-architecture.md  dashboard.md  dbctl.md  memory-architecture.md  observability.md  runtime-architecture.md  runtime-profiling.md  testing-guidelines.md  todo.md
resources/: ai_sticker_packs.json  telegram_help.md
resources/prompts/: system_prompt.md
scripts/: bootstrap_postgres.py  run_migrations_as_role.py
src/fogmoe_bot/: __init__.py  __main__.py  config.py  main.py  resources.py
src/fogmoe_bot/application/: __init__.py  conversation_lock_manager.py
src/fogmoe_bot/application/accounts/: __init__.py  context.py  operations.py
src/fogmoe_bot/application/admin/: __init__.py  models.py  ports.py  runtime.py  service.py
src/fogmoe_bot/application/ai/: ai_chat.py  ai_tools.py  chat_capabilities.py  errors.py  generated_image_sender.py  prompts.py  provider_resolver.py  router.py  runtime.py  scheduler.py  sticker_sender.py  summary.py  task_runner.py  telegram_visible_sender.py  tool_runner.py
src/fogmoe_bot/application/asset_actions/: __init__.py  banking.py  callbacks.py  models.py  ports.py  recovery_worker.py  service.py
src/fogmoe_bot/application/assistant/: agent_loop.py  agent_response.py  completion.py  context_state.py  conversation_context.py  conversation_context_cache.py  conversation_locks.py  durable_inference.py  errors.py  generated_audio_sender.py  inference_command.py  prompt_job_handler.py  provider_resolver.py  reply_filter.py  router.py  scheduler.py  sticker_sender.py  summary.py  task_runner.py  telegram_visible_sender.py  temporal_memory.py  tool_runner.py  tool_runtime.py  types.py
src/fogmoe_bot/application/banking/: __init__.py  json_projection.py  models.py  ports.py  service.py
src/fogmoe_bot/application/billing/: __init__.py  models.py  ports.py  service.py
src/fogmoe_bot/application/chance/: __init__.py  models.py  ports.py  service.py  workflow.py  workflow_models.py
src/fogmoe_bot/application/chat/: __init__.py  group_chat_history.py  group_messages.py
src/fogmoe_bot/domain/: __init__.py  temporal.py
src/fogmoe_bot/infrastructure/: __init__.py  blocking.py  config.py
src/fogmoe_config/: __init__.py  jsonc.py
src/fogmoe_dashboard/: __init__.py  __main__.py  api.py  config.py
src/fogmoe_dashboard/application/: __init__.py  dashboard.py  queries.py
src/fogmoe_dashboard/domain/: __init__.py  models.py
src/fogmoe_dashboard/infrastructure/: __init__.py  postgres.py
src/fogmoe_dashboard/presentation/: __init__.py  cli.py  duration.py  render.py
src/fogmoe_dbctl/: __init__.py  __main__.py  bootstrap_postgres.py  cli.py  config.py  migrate_as_role.py  postgres.py  schema.sql
src/fogmoe_dbctl/commands/: __init__.py  access_policy.py  access_sql.py  bootstrap.py  export_csv.py  migrate.py  migration_execution.py  shell.py
src/fogmoe_dbctl/migrations/: __init__.py  env.py  runner.py
tests/: conversation_workflow_testkit.py  observability_testkit.py  postgres_test_support.py  test_account_commands.py  test_account_operations_postgres.py  test_account_plan.py  test_account_service_repository.py  test_adaptive_polling.py  test_admin_handlers.py  test_admin_log_reader.py  test_admin_postgres.py  test_admin_runtime.py  test_admin_service.py  test_agent_loop.py  test_agent_routing_policy.py  test_agent_runtime.py  test_ai_chat_capabilities.py  test_ai_message_content.py  test_ai_provider_resolver.py  test_ai_router.py  test_asset_action_confirmation.py  test_asset_confirmation_handlers.py  test_assistant_banking_tools.py  test_assistant_billing.py  test_assistant_billing_postgres.py  test_assistant_feedback.py  test_assistant_feedback_postgres.py  test_assistant_group_context_tool.py  test_assistant_inference_service.py  test_assistant_memory_tools.py  test_assistant_retrieval_tool.py  test_assistant_schedule_domain.py  test_assistant_schedule_postgres.py  test_assistant_sticker_tool.py  test_assistant_temporal_memory_tool.py  test_assistant_time_tool.py  test_assistant_tool_effects_postgres.py  test_assistant_turn_acceptance.py  test_assistant_user_context.py  test_bank_balance_projection_fix.py  (+194 more)
(+802 files in other folders)
