[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fogmoe-telegram-bot"
version = "0.1.0"
description = "FogMoe Telegram bot"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "python-telegram-bot[socks]",
    "SQLAlchemy>=2.0",
    "asyncpg",
    "alembic",
    "litellm>=1.80.5",
    "pydantic>=2",
    "pydantic-settings>=2",
    "binance-futures-connector",
    "aiohttp",
    "aiohttp-socks>=0.10",
    "requests[socks]",
    "telegramify-markdown",
    "python-dotenv",
    "rich>=14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.18",
    "pyright>=1.1.411",
    "ruff>=0.12",
]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["fogmoe_bot", "fogmoe_dashboard", "fogmoe_dbctl"]
exclude = ["^tests/"]
warn_unreachable = true
show_error_codes = true

[tool.pyright]
include = ["src/fogmoe_bot", "src/fogmoe_dashboard", "src/fogmoe_dbctl"]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"

[project.scripts]
fogmoe-bot = "fogmoe_bot.main:main"
fogmoe-dashboard = "fogmoe_dashboard.presentation.cli:main"
fogmoe-dbctl = "fogmoe_dbctl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fogmoe_dbctl = ["migrations/sql/postgresql/*.sql", "py.typed"]
fogmoe_bot = ["py.typed"]
fogmoe_dashboard = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
